@@ -29,17 +29,19 @@ class SyntheticMltUtil {
   static final Path SYNTHETICS_DIR = Paths.get("../test/synthetic/0x01");
 
   // Using common coordinates everywhere to make sure generated MLT files are very similar,
-  // ensuring we observe difference in encoding rather than geometry variations
-  static final GeometryFactory gf = new GeometryFactory();
-  static final Coordinate c0 = new Coordinate(13, 42);
+  // ensuring we observe difference in encoding rather than geometry variations.
+  // Use SRID 4326 for visualization - all coords are in positive longitude/latitude
+  // range, but in reality the coords are in SRID=0 tile space.
+  static final GeometryFactory gf = new GeometryFactory(new PrecisionModel(), 4326);
+  static final Coordinate c0 = c(13, 42);
   // triangle
-  static final Coordinate c1 = new Coordinate(4, 47);
-  static final Coordinate c2 = new Coordinate(12, 53);
-  static final Coordinate c3 = new Coordinate(18, 45);
+  static final Coordinate c1 = c(4, 47);
+  static final Coordinate c2 = c(12, 53);
+  static final Coordinate c3 = c(18, 45);
   // hole with counter-clockwise winding
-  static final Coordinate h1 = new Coordinate(13, 48);
-  static final Coordinate h2 = new Coordinate(12, 50);
-  static final Coordinate h3 = new Coordinate(10, 49);
+  static final Coordinate h1 = c(13, 48);
+  static final Coordinate h2 = c(12, 50);
+  static final Coordinate h3 = c(10, 49);
 
   static final Point p0 = gf.createPoint(c0);
   static final Point p1 = gf.createPoint(c1);
@@ -133,6 +135,10 @@ class SyntheticMltUtil {
     return elements;
   }
 
+  static Coordinate c(int x, int y) {
+    return new Coordinate(x, y);
+  }
+
   static LineString line(Coordinate... coords) {
     return gf.createLineString(coords);
   }
@@ -202,6 +208,10 @@ class SyntheticMltUtil {
     return new Layer(name, Arrays.asList(features), 4096);
   }
 
+  static Layer layer(String name, int extent, Feature... features) {
+    return new Layer(name, Arrays.asList(features), extent);
+  }
+
   static void write(String name, Feature feat, ConversionConfig.Builder cfg) throws IOException {
     write(layer(name, feat), cfg);
   }
@@ -216,6 +226,9 @@ class SyntheticMltUtil {
       throws IOException {
     try {
       System.out.println("Generating: " + fileName);
+      var mltFile = SYNTHETICS_DIR.resolve(fileName + ".mlt");
+      Path jsonFile = SYNTHETICS_DIR.resolve(fileName + ".json");
+
       var config = cfg.build();
       var tile = new MapboxVectorTile(layers);
 
@@ -230,19 +243,13 @@ class SyntheticMltUtil {
           columnMappings.put(Pattern.compile(".*"), allColumnMappings);
         }
       }
+      
+      var metadata = MltConverter.createTilesetMetadata(tile, Map.of(), config.getIncludeIds());
+      var mlt = MltConverter.convertMvt(tile, metadata, config, null);
+      Files.write(mltFile, mlt, StandardOpenOption.CREATE_NEW);
 
-      var metadata =
-          MltConverter.createTilesetMetadata(tile, columnMappings, config.getIncludeIds());
-      var mltData = MltConverter.convertMvt(tile, metadata, config, null);
-      Files.write(
-          SYNTHETICS_DIR.resolve(fileName + ".mlt"), mltData, StandardOpenOption.CREATE_NEW);
-
-      var decodedTile = MltDecoder.decodeMlTile(mltData);
-      String jsonOutput = CliUtil.printMltGeoJson(decodedTile);
-      Files.writeString(
-          SYNTHETICS_DIR.resolve(fileName + ".json"),
-          jsonOutput + "\n",
-          StandardOpenOption.CREATE_NEW);
+      String json = CliUtil.printMltGeoJson(MltDecoder.decodeMlTile(mlt)) + "\n";
+      Files.writeString(jsonFile, json, StandardOpenOption.CREATE_NEW);
     } catch (Exception e) {
       throw new IOException("Error writing MLT file " + fileName, e);
     }
